src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLC0414_import_aliasing.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    UselessImportAlias: ~
  location:
    row: 6
    column: 7
  end_location:
    row: 6
    column: 33
  fix:
    content: collections
    location:
      row: 6
      column: 7
    end_location:
      row: 6
      column: 33
  parent: ~
- kind:
    UselessImportAlias: ~
  location:
    row: 7
    column: 24
  end_location:
    row: 7
    column: 50
  fix:
    content: OrderedDict
    location:
      row: 7
      column: 24
    end_location:
      row: 7
      column: 50
  parent: ~
- kind:
    UselessImportAlias: ~
  location:
    row: 15
    column: 14
  end_location:
    row: 15
    column: 24
  fix:
    content: bar
    location:
      row: 15
      column: 14
    end_location:
      row: 15
      column: 24
  parent: ~
- kind:
    UselessImportAlias: ~
  location:
    row: 18
    column: 18
  end_location:
    row: 18
    column: 28
  fix:
    content: bar
    location:
      row: 18
      column: 18
    end_location:
      row: 18
      column: 28
  parent: ~
- kind:
    UselessImportAlias: ~
  location:
    row: 19
    column: 22
  end_location:
    row: 19
    column: 38
  fix:
    content: foobar
    location:
      row: 19
      column: 22
    end_location:
      row: 19
      column: 38
  parent: ~
- kind:
    UselessImportAlias: ~
  location:
    row: 21
    column: 14
  end_location:
    row: 21
    column: 24
  fix:
    content: foo
    location:
      row: 21
      column: 14
    end_location:
      row: 21
      column: 24
  parent: ~
- kind:
    UselessImportAlias: ~
  location:
    row: 22
    column: 26
  end_location:
    row: 22
    column: 38
  fix:
    content: foo2
    location:
      row: 22
      column: 26
    end_location:
      row: 22
      column: 38
  parent: ~
- kind:
    UselessImportAlias: ~
  location:
    row: 24
    column: 20
  end_location:
    row: 24
    column: 36
  fix:
    content: foobar
    location:
      row: 24
      column: 20
    end_location:
      row: 24
      column: 36
  parent: ~

