src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLC2201_misplaced_comparison_constant.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    MisplacedComparisonConstant: i >= 5
  location:
    row: 20
    column: 11
  end_location:
    row: 20
    column: 17
  fix:
    content: i >= 5
    location:
      row: 20
      column: 11
    end_location:
      row: 20
      column: 17
  parent: ~
- kind:
    MisplacedComparisonConstant: i == 1
  location:
    row: 22
    column: 11
  end_location:
    row: 22
    column: 17
  fix:
    content: i == 1
    location:
      row: 22
      column: 11
    end_location:
      row: 22
      column: 17
  parent: ~
- kind:
    MisplacedComparisonConstant: dummy_return() > 3
  location:
    row: 24
    column: 11
  end_location:
    row: 24
    column: 29
  fix:
    content: dummy_return() > 3
    location:
      row: 24
      column: 11
    end_location:
      row: 24
      column: 29
  parent: ~
- kind:
    MisplacedComparisonConstant: instance.dummy_return() != 4
  location:
    row: 26
    column: 11
  end_location:
    row: 26
    column: 39
  fix:
    content: instance.dummy_return() != 4
    location:
      row: 26
      column: 11
    end_location:
      row: 26
      column: 39
  parent: ~
- kind:
    MisplacedComparisonConstant: instance.attr == 1
  location:
    row: 28
    column: 11
  end_location:
    row: 28
    column: 29
  fix:
    content: instance.attr == 1
    location:
      row: 28
      column: 11
    end_location:
      row: 28
      column: 29
  parent: ~
- kind:
    MisplacedComparisonConstant: "instance.attr == 'aaa'"
  location:
    row: 30
    column: 11
  end_location:
    row: 30
    column: 33
  fix:
    content: "instance.attr == 'aaa'"
    location:
      row: 30
      column: 11
    end_location:
      row: 30
      column: 33
  parent: ~

