src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0117_nonlocal_without_binding.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    NonlocalWithoutBinding: x
  location:
    row: 5
    column: 13
  end_location:
    row: 5
    column: 14
  fix: ~
  parent: ~
- kind:
    NonlocalWithoutBinding: y
  location:
    row: 9
    column: 13
  end_location:
    row: 9
    column: 14
  fix: ~
  parent: ~
- kind:
    NonlocalWithoutBinding: y
  location:
    row: 19
    column: 17
  end_location:
    row: 19
    column: 18
  fix: ~
  parent: ~

