src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0604_invalid_all_object.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    InvalidAllObject: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 7
  fix: ~
  parent: ~
- kind:
    InvalidAllObject: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 7
  fix: ~
  parent: ~

