src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0605_PLE0605.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    InvalidAllFormat: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 7
  fix: ~
  parent: ~
- kind:
    InvalidAllFormat: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix: ~
  parent: ~
- kind:
    InvalidAllFormat: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 7
  fix: ~
  parent: ~
- kind:
    InvalidAllFormat: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 7
  fix: ~
  parent: ~

