src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1307_bad_string_format_type.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    BadStringFormatType: ~
  location:
    row: 2
    column: 6
  end_location:
    row: 2
    column: 58
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 26
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 10
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 24
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 10
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 24
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 9
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 12
  fix: ~
  parent: ~
- kind:
    BadStringFormatType: ~
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 23
  fix: ~
  parent: ~

