src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1310_bad_str_strip_call.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    BadStrStripCall: ~
  location:
    row: 1
    column: 20
  end_location:
    row: 1
    column: 27
  fix:
    content:
      - "\"Helo\""
    location:
      row: 1
      column: 20
    end_location:
      row: 1
      column: 27
  parent: ~
- kind:
    BadStrStripCall: ~
  location:
    row: 3
    column: 20
  end_location:
    row: 3
    column: 27
  fix:
    content:
      - "\"Helo\""
    location:
      row: 3
      column: 20
    end_location:
      row: 3
      column: 27
  parent: ~
- kind:
    BadStrStripCall: ~
  location:
    row: 5
    column: 20
  end_location:
    row: 5
    column: 29
  fix:
    content:
      - "\"🤣🙃👀😀\""
    location:
      row: 5
      column: 20
    end_location:
      row: 5
      column: 29
  parent: ~
- kind:
    BadStrStripCall: ~
  location:
    row: 9
    column: 4
  end_location:
    row: 11
    column: 3
  fix:
    content:
      - "\"\"\""
      - "ther alofcsIwudikpy,ng$@mbv9\"\"\""
    location:
      row: 9
      column: 4
    end_location:
      row: 11
      column: 3
  parent: ~
- kind:
    BadStrStripCall: ~
  location:
    row: 14
    column: 20
  end_location:
    row: 16
    column: 29
  fix:
    content:
      - "\"can wegtsupidlyorfh?\""
    location:
      row: 14
      column: 20
    end_location:
      row: 16
      column: 29
  parent: ~

