src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE2402_bidirectional_unicode.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    BidirectionalUnicode: ~
  location:
    row: 2
    column: 6
  end_location:
    row: 2
    column: 50
  fix: ~
  parent: ~
- kind:
    BidirectionalUnicode: ~
  location:
    row: 3
    column: 6
  end_location:
    row: 3
    column: 13
  fix: ~
  parent: ~
- kind:
    BidirectionalUnicode: ~
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 14
  fix: ~
  parent: ~
- kind:
    BidirectionalUnicode: ~
  location:
    row: 7
    column: 19
  end_location:
    row: 7
    column: 27
  fix: ~
  parent: ~
- kind:
    BidirectionalUnicode: ~
  location:
    row: 11
    column: 4
  end_location:
    row: 11
    column: 49
  fix: ~
  parent: ~

